💄 Made it so Spanish will no longer wrap for the Report button

--- a/themes/defensa/styles.css
+++ b/themes/defensa/styles.css
@@ -145,5 +145,5 @@ a {
 
 
 .link-button-text-bold {
-  font-size: 2em;
+  font-size: 1.8em;
 }
